--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -6,6 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "start": "node dist/server/entry.mjs",
+    "start:prod": "node dist/server/entry.mjs",
     "astro": "astro"
   },
   "dependencies": {
