--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,8 @@
         "multer": "^2.0.2",
         "pg": "^8.11.3",
         "sharp": "^0.34.5",
-        "uuid": "^13.0.0"
-    },
-    "devDependencies": {
+        "uuid": "^13.0.0",
+        "typescript": "^5.3.3",
         "@types/bcryptjs": "^3.0.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
@@ -34,12 +33,13 @@
         "@types/node": "^20.10.6",
         "@types/pg": "^8.10.9",
         "@types/sharp": "^0.32.0",
-        "@types/uuid": "^11.0.0",
+        "@types/uuid": "^11.0.0"
+    },
+    "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^8.50.1",
         "@typescript-eslint/parser": "^8.50.1",
         "eslint": "^9.39.2",
         "ts-node": "^10.9.2",
-        "typescript": "^5.3.3",
         "typescript-eslint": "^8.50.1"
     }
 }
