--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -25,13 +25,13 @@
     "react-dom": "^19.2.3",
     "react-player": "^3.4.0",
     "swiper": "^12.0.3",
-    "typescript": "^5.9.3"
-  },
-  "devDependencies": {
+    "typescript": "^5.9.3",
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3"
   }
 }
