--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -7,7 +7,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "start": "node dist/server/entry.mjs",
-    "start:prod": "node dist/server/entry.mjs",
+    "start:prod": "HOST=0.0.0.0 node dist/server/entry.mjs",
     "astro": "astro"
   },
   "dependencies": {
