--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
         "start:prod": "node dist/server.js",
         "dev": "ts-node src/server.ts",
         "build": "tsc",
+        "postinstall": "npm run build",
         "lint": "eslint src"
     },
     "keywords": [],
