--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite preview --host",
-    "start:prod": "vite preview --host"
+    "start:prod": "vite preview --host",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
