feat: implementar modo de menu hibrido (PDF/Interactivo)
- Backend: migracion, BunnyStorage (uploadPdf, deleteFile), endpoint /menu-pdf

- Admin: MenuModeForm con toggle y uploader de PDF

- Client: logica condicional para ocultar carrito y cambiar comportamiento del boton Ver Menu

--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -8,8 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npx serve dist -s -l $PORT",
-    "start:prod": "npx serve dist -s -l $PORT"
+    "start": "serve -s dist -l 3000",
+    "start:prod": "serve -s dist -l 3000"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
